@@ -1,3 +1,6 @@
+2002-08-28  Bernhard Held <bernhard@bernhardheld.de>
+        * src/SDCCglue.c (printIvalArray): iterative calculation of array length
+
 2002-08-28  Jesus Calvino-Fraga and Borut Razem <borut.razem@siol.net>
 	* sdcc/sdcc.dsw: added sdcpp, sdcppa, yacc, conf projects
 
